--- a/Baobab/baobab_template.erb
+++ b/Baobab/baobab_template.erb
@@ -71,47 +71,9 @@
 <%=strings[7][0]%>
 \\\\
 <%=strings[8][0]%>
-\section{Ficha técnica y parámetros de impresión}
 
-\begin{table}[H]
-\centering
-\caption*{Ficha técnica}
-\begin{tabular}{|
->{\columncolor[HTML]{FFFFFF}}l |
->{\columncolor[HTML]{FFFFFF}}c |}
-\hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Material}}   & FlexiSMART (TPE)   \\ \hline
-\textbf{Colores disponibles}              & 11                 \\ \hline
-\textbf{Formatos disponibles}             & 1kg, 250gr         \\ \hline
-\textbf{Temperatura de deflexión térmica} & 90ºC               \\ \hline
-\textbf{Temperatura de fusión}            & 160ºC              \\ \hline
-\textbf{Temperatura de descomposición}    & \textgreater 240ºC \\ \hline
-\textbf{Densidad}                         & 0.96 gr / cm3      \\ \hline
-\textbf{Estiramiento máximo}              & 600\%              \\ \hline
-\end{tabular}
-\end{table}
-\begin{table}[H]
-\centering
-\caption*{Parámetros de impresión recomendados usando un nozzle de 0.4 mm}
-\begin{tabular}{|
->{\columncolor[HTML]{FFFFFF}}l |
->{\columncolor[HTML]{FFFFFF}}c |}
-\hline
-\multicolumn{1}{|c|}{\cellcolor[HTML]{FFFFFF}\textbf{Temperatura recomendada de impresión}} & 195º-220º              \\ \hline
-\textbf{Velocidad recomendada de impresión}                         & 20-60mm/s              \\ \hline
-\textbf{Temperatura cama caliente}                                  & \textgreater 18º        \\ \hline
-\textbf{Altura de capa óptima}                                      & 0.2 mm                 \\ \hline
-\textbf{Perímetros}                                                 & 3                      \\ \hline
-\textbf{Top solid layers}                                           & 5                      \\ \hline
-\textbf{Retracción}                                                 & Desactivada o reducida \\ \hline
-\end{tabular}
-\end{table}
+<%= File.read("data_and_tips_section.tex") %>
 
-Puedes descargarte nuestros perfiles completos de impresión de los principales programas de laminación (Cura, Slic3r y Simplify3D) desde nuestra página web:
-\\\\
-\centerline{ {\huge \url{www.fffworld.com/documentation} } }
-\\\\
-Los parámetros óptimos dependerán de la impresora 3D que utilices, sin embargo, son unos buenos parámetros para tenerlos como punto de partida. Con unas pocas impresiones serás capaz de encontrar los límites y la configuración perfecta para tu maquina.
 \section{<%=strings[9][0]%>}
 	\subsection{<%=strings[10][0]%>}
 <%=strings[11][0]%>
@@ -173,10 +135,10 @@ Los parámetros óptimos dependerán de la impresora 3D que utilices, sin embarg
 \\\\
 <%=strings[49][0]%>
 \\\\
-<%=strings[50][0]%>
-\url{https://www.antonmansson.com/how-to-cold-pull-clogged-nozzle/}
-\url{https://www.trideus.be/en/blogs/stories/tips-tricks-do-the-cold-pull/}
-\url{https://ultimaker.com/en/resources/19510-how-to-apply-atomic-method}
+<%=strings[50][0]%>\\\\
+\url{https://www.antonmansson.com/how-to-cold-pull-clogged-nozzle/}\\
+\url{https://www.trideus.be/en/blogs/stories/tips-tricks-do-the-cold-pull/}\\
+\url{https://ultimaker.com/en/resources/19510-how-to-apply-atomic-method}\\
 \url{https://printrbot.zendesk.com/hc/en-us/articles/202100554-Unclogging-the-Hot-End-Using-the-Cold-Pull-Method}
 	\subsubsection{<%=strings[51][0]%>}
 <%=strings[52][0]%>
